@@ -53,6 +53,7 @@ import com.dotcms.contenttype.business.CopyContentTypeBean;
 import com.dotcms.contenttype.business.FieldAPI;
 import com.dotcms.contenttype.model.field.Field;
 import com.dotcms.contenttype.model.field.RelationshipField;
+import com.dotcms.contenttype.model.field.RelationshipFieldBuilder;
 import com.dotcms.contenttype.model.type.BaseContentType;
 import com.dotcms.contenttype.model.type.ContentType;
 import com.dotcms.enterprise.HostAssetsJobProxy;
@@ -67,12 +68,14 @@ import com.dotcms.util.I18NMessage;
 import com.dotmarketing.beans.Host;
 import com.dotmarketing.beans.MultiTree;
 import com.dotmarketing.beans.SiteCreatedEvent;
+import com.dotmarketing.beans.Tree;
 import com.dotmarketing.business.APILocator;
 import com.dotmarketing.business.RelationshipAPI;
 import com.dotmarketing.business.UserAPI;
 import com.dotmarketing.db.HibernateUtil;
 import com.dotmarketing.exception.DotDataException;
 import com.dotmarketing.exception.DotSecurityException;
+import com.dotmarketing.factories.TreeFactory;
 import com.dotmarketing.portlets.containers.business.ContainerAPI;
 import com.dotmarketing.portlets.containers.business.FileAssetContainerUtil;
 import com.dotmarketing.portlets.containers.model.Container;
@@ -107,6 +110,7 @@ import com.dotmarketing.util.UtilMethods;
 import com.dotmarketing.util.contentet.pagination.PaginatedContentlets;
 import com.liferay.portal.model.User;
 import com.liferay.util.StringPool;
+import io.vavr.Lazy;
 import io.vavr.control.Try;
 import org.apache.commons.beanutils.BeanUtils;
 import org.quartz.JobExecutionContext;
@@ -114,7 +118,6 @@ import org.quartz.JobExecutionException;
 
 import java.io.Serializable;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.Iterator;
@@ -125,6 +128,8 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import static com.dotcms.util.DotPreconditions.checkNotNull;
+
 /**
  * This Quartz Job allows dotCMS users to copy sites. The Sites portlet also allows users to select
  * what specific pieces of the site (i.e., templates and containers, folders, files, pages, content
@@ -134,7 +139,7 @@ import java.util.stream.Collectors;
  * important amount of time. Therefore, any improvement on the performance of SQL statements is very
  * important.
  * </p>
- * 
+ *
  * @author root
  * @version 3.5
  * @since Jun 11, 2012
@@ -156,6 +161,24 @@ public class HostAssetsJobImpl extends ParentProxy{
 	private final User SYSTEM_USER;
 	private final Host SYSTEM_HOST;
 	private final Folder SYSTEM_FOLDER;
+
+	/**
+	 * This feature flag allows you to enable/disable copying Content Types when you copy a Site.
+	 */
+	public static final String ENABLE_CONTENT_TYPE_COPY = "FEATURE_FLAG_ENABLE_CONTENT_TYPE_COPY";
+	/**
+	 * This property allows you to fall back to NOT copy related content whose parent is a
+	 * Contentlet living in System Host. Such type of relationship was being ignored because
+	 * contents living in System Host are <b>NEVER</b> copied, and were not taken into account when
+	 * copying relationship data.
+	 */
+	public static final String COPY_RELATED_CONTENT_IN_SYSTEM_HOST_CONTENTS =
+			"COPY_RELATED_CONTENT_IN_SYSTEM_HOST_CONTENTS";
+
+	private static final Lazy<Boolean> CONTENT_TYPE_COPY_FLAG =
+			Lazy.of(() -> Config.getBooleanProperty(ENABLE_CONTENT_TYPE_COPY, false));
+	private static final Lazy<Boolean> COPY_RELATED_CONTENT_IN_SYSTEM_HOST_CONTENTS_FLAG = Lazy.of(() ->
+			Config.getBooleanProperty(COPY_RELATED_CONTENT_IN_SYSTEM_HOST_CONTENTS, true));
 
 	private static final boolean DONT_RESPECT_FRONTEND_ROLES = Boolean.FALSE;
 	private static final boolean RESPECT_FRONTEND_ROLES = Boolean.TRUE;
@@ -214,7 +237,7 @@ public class HostAssetsJobImpl extends ParentProxy{
 			sourceSite = this.siteAPI.DBSearch(sourceSiteId, this.userAPI.getSystemUser(), DONT_RESPECT_FRONTEND_ROLES);
 			destinationSite = this.siteAPI.DBSearch(destinationSiteId, this.userAPI.getSystemUser(), DONT_RESPECT_FRONTEND_ROLES);
 			if(QuartzUtils.getTaskProgress(jobName,jobGroup) >= 0 && QuartzUtils.getTaskProgress(jobName, jobGroup) < 100) {
-				final String infoMsg = String.format("Site '%s' is already being copied. This copy request will be ignored.",
+				final String infoMsg = String.format("Site '%s' is already being copied. This new request will be ignored.",
 						sourceSite.getHostname());
 				Logger.warn(this, infoMsg);
 				sendNotification(infoMsg, userId, NotificationLevel.WARNING);
@@ -228,13 +251,13 @@ public class HostAssetsJobImpl extends ParentProxy{
 					destinationSite.getHostname(), sourceSite.getHostname()), userId, NotificationLevel.INFO);
 			validateSiteInfo(sourceSite,destinationSite,sourceSiteId,destinationSiteId,jobName);
 			copySiteAssets(sourceSite, destinationSite, copyOptions);
-		} catch (final DotDataException | DotSecurityException e) {
+		} catch (final Throwable e) {
 			final String errorMsg = String
 					.format("An error occurred when copying source Site '%s' to destination Site '%s': %s",
 							sourceSite.getHostname(), destinationSite.getHostname(), ExceptionUtil.getErrorMessage(e));
 			Logger.error(HostAssetsJobImpl.class, errorMsg, e);
-			this.sendNotification(String.format("The copy of Site '%s' has failed. Please check the logs for more information",
-					destinationSite.getHostname()), userId, NotificationLevel.ERROR);
+			this.sendNotification(String.format("The copy of Site '%s' has failed: %s. Please check the logs for more information",
+					destinationSite.getHostname(), ExceptionUtil.getErrorMessage(e)), userId, NotificationLevel.ERROR);
 			throw new JobExecutionException(errorMsg, e);
 		}
 		Logger.info(this, "======================================================================");
@@ -250,28 +273,10 @@ public class HostAssetsJobImpl extends ParentProxy{
 		this.sendNotification(String.format(successMsg, destinationSite.getHostname()), userId, NotificationLevel.INFO);
 	}
 
-	private HTMLPageAssetAPI.TemplateContainersReMap getMirrorTemplateContainersReMap(Template sourceTemplate)
-			throws DotDataException, DotSecurityException {
-
-		User user = userAPI.getSystemUser();
-		boolean respectFrontendRoles = false;
-
-		List<Container> sourceContainers = templateAPI.getContainersInTemplate(sourceTemplate, user,
-				respectFrontendRoles);
-		List<HTMLPageAssetAPI.TemplateContainersReMap.ContainerRemapTuple> containerMappings = new LinkedList<>();
-		for (Container sourceContainer : sourceContainers) {
-			HTMLPageAssetAPI.TemplateContainersReMap.ContainerRemapTuple containerMapping = new HTMLPageAssetAPI.TemplateContainersReMap.ContainerRemapTuple(
-					sourceContainer, sourceContainer);
-			containerMappings.add(containerMapping);
-		}
-		return new HTMLPageAssetAPI.TemplateContainersReMap(sourceTemplate,
-				sourceTemplate, containerMappings);
-	}
-
 	/**
 	 * Performs the copy process of the user-specified elements from the source site to the
 	 * destination site.
-	 * 
+	 *
 	 * @param sourceSite      The {@link Host} object containing the information that will be
 	 *                        copied.
 	 * @param destinationSite The new {@link Host} object that will contain the information from
@@ -287,20 +292,20 @@ public class HostAssetsJobImpl extends ParentProxy{
 		try {
 			HibernateUtil.startTransaction();
 			// Global Vars
-			double progressIncrement = 0;
-			double currentProgress = 0;
+			double progressIncrement;
+			double currentProgress;
 
 			this.siteCopyStatus.addMessage("copying-templates");
 			// ======================================================================
 			// Copying templates and containers
 			// ======================================================================
-			final Map<String, HTMLPageAssetAPI.TemplateContainersReMap> templatesMappingBySourceId = new HashMap<>();
+			final Map<String, HTMLPageAssetAPI.TemplateContainersReMap> copiedTemplatesBySourceId = new HashMap<>();
 			final Map<String, Container> copiedContainersBySourceId = new HashMap<>();
-			final Map<String, FolderMapping> folderMappingsBySourceId = new HashMap<>();
-			final Map<String, ContentMapping> contentMappingsBySourceId = new HashMap<>();
-			final List<Contentlet> contentsToCopyDependencies =  new ArrayList<>();
-			final Map<String, ContentTypeMapping> copiedContentTypes = new HashMap<>();
-			
+			final Map<String, FolderMapping> copiedFoldersBySourceId = new HashMap<>();
+			final Map<String, ContentMapping> copiedContentsBySourceId = new HashMap<>();
+			final List<Contentlet> contentsWithRelationships =  new ArrayList<>();
+			final Map<String, ContentTypeMapping> copiedContentTypesBySourceId = new HashMap<>();
+			final Map<String, RelationshipMapping> copiedRelationshipsBySourceId = new HashMap<>();
 			if (copyOptions.isCopyTemplatesAndContainers()) {
 				Logger.info(this, "----------------------------------------------------------------------");
 				Logger.info(this, String.format(":::: Copying Templates and Containers to new Site '%s'", destinationSite.getHostname()));
@@ -326,14 +331,14 @@ public class HostAssetsJobImpl extends ParentProxy{
 										Logger.debug(HostAssetsJobImpl.class, () -> String.format("---> Copying file-asset container '%s' [ %s ]",
 												sourceFileAssetContainer.getPath(), sourceFileAssetContainer.getIdentifier()));
 										final Contentlet sourceContent = this.contentAPI.findContentletByIdentifier(
-														sourceFileAssetContainer.getIdentifier(),
-														sourceFileAssetContainer.isLive(),
-														sourceFileAssetContainer.getLanguageId(),
-														this.SYSTEM_USER,
-														DONT_RESPECT_FRONTEND_ROLES);
+												sourceFileAssetContainer.getIdentifier(),
+												sourceFileAssetContainer.isLive(),
+												sourceFileAssetContainer.getLanguageId(),
+												this.SYSTEM_USER,
+												DONT_RESPECT_FRONTEND_ROLES);
 										final Folder sourceFolder = this.folderAPI.find(sourceContent.getFolder(), this.SYSTEM_USER, DONT_RESPECT_FRONTEND_ROLES);
 										// This should store the new container destination folder into the map.
-										final Folder destinationFolder = copyFolder(sourceFolder, destinationSite, folderMappingsBySourceId);
+										final Folder destinationFolder = copyFolder(sourceFolder, destinationSite, copiedFoldersBySourceId);
 										Logger.debug(HostAssetsJobImpl.class, () -> String.format("---> Container-As-File destination folder path is '%s'",
 												destinationFolder.getPath()));
 										// now create the Copy of the container as file and all its assets
@@ -345,12 +350,12 @@ public class HostAssetsJobImpl extends ParentProxy{
 											processedContentletsList.add(
 													processCopyOfContentlet(asset, copyOptions,
 															destinationSite,
-															contentMappingsBySourceId,
-															folderMappingsBySourceId,
+															copiedContentsBySourceId,
+															copiedFoldersBySourceId,
 															copiedContainersBySourceId,
-															templatesMappingBySourceId,
-															contentsToCopyDependencies,
-															copiedContentTypes
+															copiedTemplatesBySourceId,
+															contentsWithRelationships,
+															copiedContentTypesBySourceId
 													)
 											);
 										}
@@ -377,9 +382,9 @@ public class HostAssetsJobImpl extends ParentProxy{
 															newFileAssetContainer.getIdentifier()));
 										}
 									} else {
-									 destinationContainer = this.containerAPI.copy(sourceContainer, destinationSite, this.SYSTEM_USER, DONT_RESPECT_FRONTEND_ROLES);
-									 copiedContainersBySourceId.put(sourceContainer.getIdentifier(), destinationContainer);
-								  }
+										destinationContainer = this.containerAPI.copy(sourceContainer, destinationSite, this.SYSTEM_USER, DONT_RESPECT_FRONTEND_ROLES);
+										copiedContainersBySourceId.put(sourceContainer.getIdentifier(), destinationContainer);
+									}
 								} else {
 									// Probably belongs to system host
 									destinationContainer = sourceContainer;
@@ -395,10 +400,10 @@ public class HostAssetsJobImpl extends ParentProxy{
 						final Template newTemplate = copyTemplate(sourceTemplate, destinationSite, copiedContainersBySourceId);
 						HTMLPageAssetAPI.TemplateContainersReMap templateMapping = new HTMLPageAssetAPI.TemplateContainersReMap(
 								sourceTemplate, newTemplate, containerMappings);
-						templatesMappingBySourceId.put(sourceTemplate.getIdentifier(), templateMapping);
+						copiedTemplatesBySourceId.put(sourceTemplate.getIdentifier(), templateMapping);
 					} catch (final Exception e) {
 						Logger.error(this, String.format("An error occurred when copying data from Template '%s' [%s] " +
-								"from Site '%s' to Site '%s'. The process will continue...", sourceTemplate.getTitle()
+										"from Site '%s' to Site '%s'. The process will continue...", sourceTemplate.getTitle()
 								, sourceTemplate.getIdentifier(), sourceSite.getHostname(), destinationSite
 										.getHostname()), e);
 					}
@@ -441,7 +446,7 @@ public class HostAssetsJobImpl extends ParentProxy{
 						}
 						final HTMLPageAssetAPI.TemplateContainersReMap templateMapping = new HTMLPageAssetAPI.TemplateContainersReMap(
 								sourceTemplate, sourceTemplate, containerMappings);
-						templatesMappingBySourceId.put(sourceTemplate.getIdentifier(), templateMapping);
+						copiedTemplatesBySourceId.put(sourceTemplate.getIdentifier(), templateMapping);
 					} catch (final Exception e) {
 						Logger.error(this, String.format("An error occurred when copying data from Template '%s' [%s] " +
 										"from Site '%s' to Site '%s'. The process will continue...", sourceTemplate.getTitle()
@@ -465,7 +470,7 @@ public class HostAssetsJobImpl extends ParentProxy{
 				Logger.info(this, String.format("-> Copying %d Folders", allSourceFolders.size()));
 				for (final Folder sourceFolder : allSourceFolders) {
 					try {
-					    copyFolder(sourceFolder, destinationSite, folderMappingsBySourceId);
+						copyFolder(sourceFolder, destinationSite, copiedFoldersBySourceId);
 					} catch (final Exception e) {
 						Logger.error(this, String.format("An error occurred when copying folder '%s' from Site '%s' to" +
 								" Site '%s'. The process will continue...", sourceFolder.getPath(), sourceSite
@@ -477,7 +482,7 @@ public class HostAssetsJobImpl extends ParentProxy{
 				this.siteCopyStatus.updateProgress(10);
 
 				if (copyOptions.isCopyLinks()) {
-					final Collection<FolderMapping> folders = folderMappingsBySourceId.values();
+					final Collection<FolderMapping> folders = copiedFoldersBySourceId.values();
 					// ======================================================================
 					// Copying Menu Links
 					// ======================================================================
@@ -493,8 +498,8 @@ public class HostAssetsJobImpl extends ParentProxy{
 								this.menuLinkAPI.copy(sourceLink, folderMapping.destinationFolder, this.SYSTEM_USER, DONT_RESPECT_FRONTEND_ROLES);
 							} catch (final Exception e) {
 								Logger.error(this, String.format("An error occurred when copying menu link '%s' from " +
-										"'%s' in Site '%s' to Site '%s'. The process will continue...", sourceLink
-										.getTitle(), folderMapping.sourceFolder.getPath(), sourceSite.getHostname(),
+												"'%s' in Site '%s' to Site '%s'. The process will continue...", sourceLink
+												.getTitle(), folderMapping.sourceFolder.getPath(), sourceSite.getHostname(),
 										destinationSite.getHostname()), e);
 							}
 						}
@@ -505,24 +510,23 @@ public class HostAssetsJobImpl extends ParentProxy{
 				if(copyOptions.isCopyTemplatesAndContainers()){
 					Logger.info(this, "----------------------------------------------------------------------");
 					Logger.info(this, String.format(":::: Pointing %d Templates to copied themes for new Site '%s'",
-							templatesMappingBySourceId.size(), destinationSite.getHostname()));
-					for (final String sourceTemplateId : templatesMappingBySourceId.keySet()) {
-						final Template srcTemplate = templatesMappingBySourceId.get(sourceTemplateId).getSourceTemplate();
-						if(UtilMethods.isSet(srcTemplate.getTheme()) && folderMappingsBySourceId.containsKey(srcTemplate.getTheme())){
-							final String destTemplateInode = templatesMappingBySourceId.get(sourceTemplateId).getDestinationTemplate().getInode();
-							final String destTheme = folderMappingsBySourceId.get(srcTemplate.getTheme()).destinationFolder.getInode();
+							copiedTemplatesBySourceId.size(), destinationSite.getHostname()));
+					for (final String sourceTemplateId : copiedTemplatesBySourceId.keySet()) {
+						final Template srcTemplate = copiedTemplatesBySourceId.get(sourceTemplateId).getSourceTemplate();
+						if(UtilMethods.isSet(srcTemplate.getTheme()) && copiedFoldersBySourceId.containsKey(srcTemplate.getTheme())){
+							final String destTemplateInode = copiedTemplatesBySourceId.get(sourceTemplateId).getDestinationTemplate().getInode();
+							final String destTheme = copiedFoldersBySourceId.get(srcTemplate.getTheme()).destinationFolder.getInode();
 							this.templateAPI.updateThemeWithoutVersioning(destTemplateInode, destTheme);
 						}
 					}
 				}
-				
+
 			}
 			HibernateUtil.closeAndCommitTransaction();
 			HibernateUtil.startTransaction();
 			this.siteCopyStatus.updateProgress(70);
 
-			if (Config.getBooleanProperty("FEATURE_FLAG_ENABLE_CONTENT_TYPE_COPY", false) && copyOptions.isCopyContentTypes()) {
-				final List<Relationship> copiedRelationships = new ArrayList<>();
+			if (CONTENT_TYPE_COPY_FLAG.get() && copyOptions.isCopyContentTypes()) {
 				Logger.info(this, "----------------------------------------------------------------------");
 				Logger.info(this, String.format(":::: Copying Content Types to new Site '%s'", destinationSite.getHostname()));
 				final List<ContentType> sourceContentTypes = this.contentTypeAPI.search("",
@@ -535,25 +539,67 @@ public class HostAssetsJobImpl extends ParentProxy{
 							.name(sourceContentType.name())
 							.folder(sourceContentType.folder())
 							.host(destinationSite.getIdentifier());
-					final ContentType copiedContentType = this.contentTypeAPI.copyFromAndDependencies(builder.build(), destinationSite);
-					copiedContentTypes.put(sourceContentType.id(), new ContentTypeMapping(sourceContentType, copiedContentType));
-					final List<Field> relFields = copiedContentType.fields(RelationshipField.class);
-					if (!relFields.isEmpty()) {
-						for (final Field field : relFields) {
-							final Relationship relationshipFromField = this.relationshipAPI.getRelationshipFromField(field, this.SYSTEM_USER);
-							copiedRelationships.add(relationshipFromField);
+					// Copy the Content Type objects with NONE of their relationship fields
+					final ContentType copiedContentType =
+							this.contentTypeAPI.copyFromAndDependencies(builder.build(), destinationSite, false);
+					copiedContentTypesBySourceId.put(sourceContentType.id(), new ContentTypeMapping(sourceContentType, copiedContentType));
+				}
+				final List<RelationshipMapping> childRelationships = new ArrayList<>();
+				// Now, copy the relationship fields back, but EXCLUDE all relationship fields that are pointing
+				// to Content Types living under System Host
+				for (final ContentType sourceContentType : sourceContentTypes) {
+					final List<Field> sourceRelationshipFields = sourceContentType.fields(RelationshipField.class);
+					for (final Field sourceField : sourceRelationshipFields) {
+						final RelationshipField sourceRelationshipField = (RelationshipField) sourceField;
+						final Relationship sourceRelationship = this.relationshipAPI.getRelationshipFromField(sourceRelationshipField, this.SYSTEM_USER);
+						if (this.hasSystemHostTypes(sourceRelationship)) {
+							Logger.warn(this, String.format("Skipping Relationship Field '%s' from Content Type '%s'" +
+											" because it points to at least one Content Type living under System Host",
+									sourceRelationshipField.name(), sourceContentType.name()));
+							continue;
 						}
+						final ContentTypeMapping parentContentTypeMapping = copiedContentTypesBySourceId.get(sourceRelationship.getParentStructure().id());
+						final ContentTypeMapping childContentTypeMapping = copiedContentTypesBySourceId.get(sourceRelationship.getChildStructure().id());
+						checkNotNull(parentContentTypeMapping, "Parent Content Type ID in Relationship Field " +
+								"'%s' in Content Type '%s' is null", sourceRelationshipField.name(), sourceContentType.name());
+						checkNotNull(childContentTypeMapping, "Child Content Type ID in Relationship Field " +
+								"'%s' in Content Type '%s' is null", sourceRelationshipField.name(), sourceContentType.name());
+						// If this Relationship Field represents the parent of the relationship, or if the relationship is between
+						// the same Content Types, just copy the field with the new IDs and data
+						if (this.relationshipAPI.isChildField(sourceRelationship, sourceRelationshipField) || this.relationshipAPI.sameParentAndChild(sourceRelationship)) {
+							final String copiedContentTypeId = copiedContentTypesBySourceId.get(sourceContentType.id()).destinationContentType.id();
+							final String copiedContentTypeVarName = childContentTypeMapping.destinationContentType.variable();
+							this.createRelationshipField(copiedContentTypeId,
+									copiedContentTypeVarName, sourceRelationshipField,
+									sourceRelationship, copiedRelationshipsBySourceId);
+						} else {
+							// Here, the Relationship Field is the child of the current Relationship and its parent Relationship has
+							// already been copied. Therefore, we can create the child Relationship Field now and reference the
+							// existing relationship
+							if (copiedRelationshipsBySourceId.containsKey(sourceRelationship.getInode())) {
+								final Relationship copiedRelationship = copiedRelationshipsBySourceId.get(sourceRelationship.getInode()).destinationRelationship;
+								final String copiedContentTypeId = copiedContentTypesBySourceId.get(sourceContentType.id()).destinationContentType.id();
+								this.createRelationshipField(copiedContentTypeId,
+										copiedRelationship.getRelationTypeValue(), sourceRelationshipField,
+										sourceRelationship, copiedRelationshipsBySourceId);
+							} else {
+								// If the Relationship Field points to a relationship that hasn't been copied yet, we'll wait until
+								// the parent Relationship is created and store its data in a list
+								final RelationshipMapping childRelationshipMapping =
+										new RelationshipMapping(sourceRelationship, sourceContentType, sourceRelationshipField);
+								childRelationships.add(childRelationshipMapping);
+							}
+						}
+
 					}
 				}
-				if (!copiedRelationships.isEmpty()) {
-					for (final Relationship relationship : copiedRelationships) {
-						final String parentContentTypeId = copiedContentTypes.containsKey(relationship.getParentStructureInode()) ?
-								copiedContentTypes.get(relationship.getParentStructureInode()).destinationContentType.id() : relationship.getParentStructureInode();
-						final String childContentTypeId = copiedContentTypes.containsKey(relationship.getChildStructureInode()) ?
-								copiedContentTypes.get(relationship.getChildStructureInode()).destinationContentType.id() : relationship.getChildStructureInode();
-						relationship.setParentStructureInode(parentContentTypeId);
-						relationship.setChildStructureInode(childContentTypeId);
-						this.relationshipAPI.save(relationship);
+				if (!childRelationships.isEmpty()) {
+					// Copy all child Relationships that don't have a parent Relationship, if any
+					for (final RelationshipMapping childRelationshipMapping : childRelationships) {
+						this.copyChildRelationship(childRelationshipMapping.sourceRelationship,
+								childRelationshipMapping.sourceContentType,
+								childRelationshipMapping.sourceField, copiedRelationshipsBySourceId,
+								copiedContentTypesBySourceId);
 					}
 				}
 				HibernateUtil.closeAndCommitTransaction();
@@ -566,94 +612,98 @@ public class HostAssetsJobImpl extends ParentProxy{
 			this.siteCopyStatus.addMessage("copying-content-on-host");
 			int contentCount = 0;
 
-            // Option 1: Copy ONLY content pages WITHOUT other contents, if 
+			// Option 1: Copy ONLY content pages WITHOUT other contents, if
 			// copyOptions.isCopyContentOnHost() == true should be handled by option 2.
-            if (!copyOptions.isCopyContentOnHost() && copyOptions.isCopyLinks()) {
+			if (!copyOptions.isCopyContentOnHost() && copyOptions.isCopyLinks()) {
 				Logger.info(this, "----------------------------------------------------------------------");
-				Logger.info(this, String.format(":::: Copying HTML Pages - without their contents - to new Site '%s'", destinationSite.getHostname()));
-                final PaginatedContentlets sourceContentlets = this.contentAPI.findContentletsPaginatedByHost(sourceSite,
-                        Arrays.asList(BaseContentType.HTMLPAGE.getType()), null, this.SYSTEM_USER,
+				Logger.info(this, String.format(":::: Copying HTML Pages - but NOT their contents - to new Site '%s'", destinationSite.getHostname()));
+				final PaginatedContentlets sourceContentlets = this.contentAPI.findContentletsPaginatedByHost(sourceSite,
+						List.of(BaseContentType.HTMLPAGE.getType()), null, this.SYSTEM_USER,
 						DONT_RESPECT_FRONTEND_ROLES);
 
-                currentProgress = 70;
-                progressIncrement = (95 - 70) / (double) sourceContentlets.size();
+				currentProgress = 70;
+				progressIncrement = (95 - 70) / (double) sourceContentlets.size();
 				Logger.info(this, String.format("-> Copying %d HTML Pages", sourceContentlets.size()));
-                for (final Contentlet sourceContent : sourceContentlets) {
-                    processCopyOfContentlet(sourceContent, copyOptions,
-                            destinationSite, contentMappingsBySourceId, folderMappingsBySourceId,
-                            copiedContainersBySourceId, templatesMappingBySourceId,
-                            contentsToCopyDependencies, copiedContentTypes);
+				for (final Contentlet sourceContent : sourceContentlets) {
+					if (null != sourceContent) {
+						this.processCopyOfContentlet(sourceContent, copyOptions,
+								destinationSite, copiedContentsBySourceId, copiedFoldersBySourceId,
+								copiedContainersBySourceId, copiedTemplatesBySourceId,
+								contentsWithRelationships, copiedContentTypesBySourceId);
 
-                    currentProgress += progressIncrement;
+						currentProgress += progressIncrement;
 
-					this.siteCopyStatus.updateProgress((int) currentProgress);
-                    if (contentCount % 100 == 0) {
-                        HibernateUtil.closeAndCommitTransaction();
-                        HibernateUtil.startTransaction();
-                    }
-                    contentCount++;
-                }
+						this.siteCopyStatus.updateProgress((int) currentProgress);
+						if (contentCount % 100 == 0) {
+							HibernateUtil.closeAndCommitTransaction();
+							HibernateUtil.startTransaction();
+						}
+						contentCount++;
+					}
+				}
 
-                // Copy contentlet dependencies
-				this.copyRelatedContentlets(contentsToCopyDependencies,
-                        contentMappingsBySourceId, copiedContentTypes, copyOptions);
-            }
+				// Copy contentlet dependencies
+				this.copyRelatedContentlets(contentsWithRelationships,
+						copiedContentsBySourceId, copiedRelationshipsBySourceId, copyOptions);
+			}
 
-            // Option 2: Copy all content on site
-            if (copyOptions.isCopyContentOnHost()) {
+			// Option 2: Copy all content on site
+			if (copyOptions.isCopyContentOnHost()) {
 				Logger.info(this, "----------------------------------------------------------------------");
 				Logger.info(this, String.format(":::: Copying ALL contents to new Site '%s'", destinationSite.getHostname()));
-                final PaginatedContentlets sourceContentlets = this.contentAPI.findContentletsPaginatedByHost(sourceSite,
+				final PaginatedContentlets sourceContentlets = this.contentAPI.findContentletsPaginatedByHost(sourceSite,
 						this.SYSTEM_USER, DONT_RESPECT_FRONTEND_ROLES);
-                currentProgress = 70;
-                progressIncrement = (95 - 70) / (double) sourceContentlets.size();
+				currentProgress = 70;
+				progressIncrement = (95 - 70) / (double) sourceContentlets.size();
 
-                // Process simple Contents first. This makes it easier to later 
-                // associate page contents when updating the multi-tree
-                Iterator<Contentlet> ite = sourceContentlets.iterator();
+				// Process simple Contents first. This makes it easier to later
+				// associate page contents when updating the multi-tree
+				Iterator<Contentlet> ite = sourceContentlets.iterator();
 				Logger.info(this, "-> Copying simple contents first");
-                while (ite.hasNext()) {
-                	final Contentlet sourceContent = ite.next();
-                	if (!sourceContent.isHTMLPage()) {
-	                    processCopyOfContentlet(sourceContent, copyOptions,
-	                            destinationSite, contentMappingsBySourceId, folderMappingsBySourceId,
-	                            copiedContainersBySourceId, templatesMappingBySourceId,
-	                            contentsToCopyDependencies, copiedContentTypes);
-	                    // Update progress ONLY if the record is processed
-	                    currentProgress += progressIncrement;
+				while (ite.hasNext()) {
+					final Contentlet sourceContent = ite.next();
+					if (null != sourceContent && !sourceContent.isHTMLPage()) {
+						this.processCopyOfContentlet(sourceContent, copyOptions,
+								destinationSite, copiedContentsBySourceId, copiedFoldersBySourceId,
+								copiedContainersBySourceId, copiedTemplatesBySourceId,
+								contentsWithRelationships, copiedContentTypesBySourceId);
+						// Update progress ONLY if the record is processed
+						currentProgress += progressIncrement;
 						this.siteCopyStatus.updateProgress((int) currentProgress);
-	                    if (contentCount % 100 == 0) {
-	                        HibernateUtil.closeAndCommitTransaction();
-	                        HibernateUtil.startTransaction();
-	                    }
-	                    contentCount++;
-	                    ite.remove();
-                	}
-                }
+						if (contentCount % 100 == 0) {
+							HibernateUtil.closeAndCommitTransaction();
+							HibernateUtil.startTransaction();
+						}
+						contentCount++;
+						ite.remove();
+					}
+				}
 				Logger.info(this, String.format("-> %d simple contents have been copied", contentCount));
-                // Now process Content Pages. Updating the multi-tree will be 
-                // easier since the content is already in
+				// Now process Content Pages. Updating the multi-tree will be
+				// easier since the content is already in
 				Logger.info(this, "-> Now, copying HTML Pages");
-                ite = sourceContentlets.iterator();
-                while (ite.hasNext()) {
-                	final Contentlet sourceContent = ite.next();
-                    processCopyOfContentlet(sourceContent, copyOptions,
-                            destinationSite, contentMappingsBySourceId, folderMappingsBySourceId,
-                            copiedContainersBySourceId, templatesMappingBySourceId,
-                            contentsToCopyDependencies, copiedContentTypes);
-                    currentProgress += progressIncrement;
-                    siteCopyStatus.updateProgress((int) currentProgress);
-                    if (contentCount % 100 == 0) {
-                        HibernateUtil.closeAndCommitTransaction();
-                        HibernateUtil.startTransaction();
-                    }
-                    contentCount++;
-                }
+				ite = sourceContentlets.iterator();
+				while (ite.hasNext()) {
+					final Contentlet sourceContent = ite.next();
+					if (null != sourceContent && sourceContent.isHTMLPage()) {
+						this.processCopyOfContentlet(sourceContent, copyOptions,
+								destinationSite, copiedContentsBySourceId, copiedFoldersBySourceId,
+								copiedContainersBySourceId, copiedTemplatesBySourceId,
+								contentsWithRelationships, copiedContentTypesBySourceId);
+						currentProgress += progressIncrement;
+						siteCopyStatus.updateProgress((int) currentProgress);
+						if (contentCount % 100 == 0) {
+							HibernateUtil.closeAndCommitTransaction();
+							HibernateUtil.startTransaction();
+						}
+						contentCount++;
+					}
+				}
 				Logger.info(this, String.format("-> A total of %d contents have been copied", contentCount));
-                // Copy contentlet dependencies
-                this.copyRelatedContentlets(contentsToCopyDependencies,
-                        contentMappingsBySourceId, copiedContentTypes, copyOptions);
-            }
+				// Copy contentlet dependencies
+				this.copyRelatedContentlets(contentsWithRelationships,
+						copiedContentsBySourceId, copiedRelationshipsBySourceId, copyOptions);
+			}
 
 			this.siteCopyStatus.updateProgress(95);
 
@@ -692,6 +742,107 @@ public class HostAssetsJobImpl extends ParentProxy{
 		}
 	}
 
+	/**
+	 * Creates a Relationship Field in a given Content Type with a list of specific parameters, and
+	 * keeps track of the generated Relationship record. This method is very useful when Content
+	 * Types are being copied over to the new Site and Relationships are present.
+	 * <p>Relationship Fields must be carefully handled as the Relationship they generate must
+	 * reflect the new IDs and Velocity Variable Names from the copied Content Types while keeping
+	 * the exact same structure as the original one. Keep in mind that the API will create both the
+	 * Relationship Field and the Relationship record. It's very important that the new
+	 * Relationship be added to the Relationship tracking map.</p>
+	 *
+	 * @param contentTypeId       The ID of the Content Type where the new Relationship Field
+	 *                            will be added.
+	 * @param relationTypeValue   The Velocity Variable Name of the Content Type that the
+	 *                            Relationship Field will point to, or the existing Relation Type
+	 *                            Value in case the Relationship already exists.
+	 * @param relationshipField   The source {@link RelationshipField} that will be used to build
+	 *                            the new field, as it contain data that can be simply reused.
+	 * @param sourceRelationship  The source {@link Relationship} that will be added to the map of
+	 *                            copied Relationships.
+	 * @param copiedRelationships The map containing the copied Relationships from the source Site.
+	 *
+	 * @throws DotDataException     An error occurred when interacting with the database.
+	 * @throws DotSecurityException The current User does not have the permissions to perform this
+	 *                              action.
+	 */
+	private void createRelationshipField(final String contentTypeId,
+										 final String relationTypeValue,
+										 final RelationshipField relationshipField,
+										 final Relationship sourceRelationship,
+										 final Map<String, RelationshipMapping> copiedRelationships) throws DotDataException, DotSecurityException {
+		final Field newField = RelationshipFieldBuilder.builder(relationshipField)
+				.sortOrder(relationshipField.sortOrder())
+				.contentTypeId(contentTypeId)
+				.id(null)
+				.relationType(relationTypeValue)
+				.build();
+		this.contentTypeFieldAPI.save(newField, this.SYSTEM_USER);
+		final Relationship copiedRelationship = this.relationshipAPI.getRelationshipFromField(newField, this.SYSTEM_USER);
+		copiedRelationships.put(sourceRelationship.getInode(), new RelationshipMapping(sourceRelationship, copiedRelationship));
+	}
+
+	/**
+	 * Depending on the order in which Content Types are copied, there might be a situation where
+	 * a child Relationship is retrieved before its parent Relationship has been saved. This method
+	 * takes all the child Relationships that could not be processed yet, and copies them to the new
+	 * Content Type. If their parent Relationship was added, then it will be associated to the
+	 * existing Relationship; if there's no parent Relationship, a new one will be created.
+	 *
+	 * @param sourceRelationship      The source child {@link Relationship} used to retrieve useful
+	 *                                information from the source data. Also, it will be added to
+	 *                                the map of copied Relationships.
+	 * @param sourceContentType       The source {@link ContentType} that contains the child
+	 *                                Relationship.
+	 * @param sourceRelationshipField The source {@link RelationshipField} that represents the
+	 *                                child Relationship and will be used to create the new field.
+	 * @param copiedRelationships     The map containing the copied Relationships from the source
+	 *                                Content Types.
+	 * @param copiedContentTypes      The map containing the copied Content Types from the source
+	 *                                Site.
+	 *
+	 * @throws DotDataException     An error occurred when interacting with the database.
+	 * @throws DotSecurityException The current User does not have the permissions to perform this
+	 *                              action.
+	 */
+	private void copyChildRelationship(final Relationship sourceRelationship,
+									   final ContentType sourceContentType,
+									   final RelationshipField sourceRelationshipField,
+									   final Map<String, RelationshipMapping> copiedRelationships,
+									   final Map<String, ContentTypeMapping> copiedContentTypes) throws DotDataException, DotSecurityException {
+		String contentTypeId;
+		String relationTypeValue;
+		if (copiedRelationships.containsKey(sourceRelationship.getInode())) {
+			// Copy the Relationship Field using an existing Relationship
+			final Relationship copiedRelationship = copiedRelationships.get(sourceRelationship.getInode()).destinationRelationship;
+			contentTypeId = copiedContentTypes.get(sourceContentType.id()).destinationContentType.id();
+			relationTypeValue = copiedRelationship.getRelationTypeValue();
+		} else {
+			// Copy the Relationship Field and create a new Relationship as it doesn't exist yet
+			final ContentTypeMapping parentContentTypeMapping = copiedContentTypes.get(sourceRelationship.getParentStructureInode());
+			final ContentTypeMapping childContentTypeMapping = copiedContentTypes.get(sourceRelationship.getChildStructureInode());
+			contentTypeId = childContentTypeMapping.destinationContentType.id();
+			relationTypeValue = parentContentTypeMapping.destinationContentType.variable();
+		}
+		this.createRelationshipField(contentTypeId, relationTypeValue, sourceRelationshipField, sourceRelationship, copiedRelationships);
+	}
+
+	/**
+	 * Indicates whether the given {@link Relationship} references at least one Content Type that
+	 * lives under System Host.
+	 *
+	 * @param relationship The {@link Relationship} to be analyzed.
+	 *
+	 * @return If the Relationship contains at least one Content Type that lives under System Host,
+	 * returns {@code true}.
+	 */
+	private boolean hasSystemHostTypes(final Relationship relationship) {
+		final String parentContentTypeSiteId = relationship.getParentStructure().getHost();
+		final String childContentTypeSiteId = relationship.getChildStructure().getHost();
+		return Host.SYSTEM_HOST.equals(parentContentTypeSiteId) || Host.SYSTEM_HOST.equals(childContentTypeSiteId);
+	}
+
 	private void triggerEvents (final String destinationSiteIdentifier) {
 
 		final SiteCreatedEvent siteCreatedEvent = new SiteCreatedEvent();
@@ -700,11 +851,11 @@ public class HostAssetsJobImpl extends ParentProxy{
 		APILocator.getLocalSystemEventsAPI().notify(siteCreatedEvent);  // LOCAL
 
 		Try.run(()->APILocator.getSystemEventsAPI()					    // CLUSTER WIDE
-				.push(SystemEventType.CLUSTER_WIDE_EVENT, new Payload(siteCreatedEvent)))
+						.push(SystemEventType.CLUSTER_WIDE_EVENT, new Payload(siteCreatedEvent)))
 				.onFailure(e -> Logger.error(HostAssetsJobImpl.this, e.getMessage()));
 
 		Try.run(()->APILocator.getSystemEventsAPI()					    // for the socket
-				.push(SystemEventType.CREATED_SITE, new Payload(destinationSiteIdentifier)))
+						.push(SystemEventType.CREATED_SITE, new Payload(destinationSiteIdentifier)))
 				.onFailure(e -> Logger.error(HostAssetsJobImpl.this, e.getMessage()));
 	}
 
@@ -722,7 +873,7 @@ public class HostAssetsJobImpl extends ParentProxy{
 	 * @throws DotDataException
 	 */
 	private Template copyTemplate(final Template sourceTemplate, final Host destinationSite,
-			final Map<String, Container> copiedContainersBySourceId) throws DotDataException {
+								  final Map<String, Container> copiedContainersBySourceId) throws DotDataException {
 		try {
 			final Template sourceTemplateCopy = new Template();
 			BeanUtils.copyProperties(sourceTemplateCopy, sourceTemplate);
@@ -737,14 +888,14 @@ public class HostAssetsJobImpl extends ParentProxy{
 
 			String body = sourceTemplateCopy.getBody();
 			if (UtilMethods.isSet(body)) {
-			  final Set<String> containersIdOrPath = StringUtils.quotedLiteral(body)
-					  .stream()
-					  .filter(literalValue -> UUIDUtil.isUUID(literalValue) ||
-							  FileAssetContainerUtil.getInstance().isFullPath(literalValue))
-					  .collect(Collectors.toSet());
+				final Set<String> containersIdOrPath = StringUtils.quotedLiteral(body)
+						.stream()
+						.filter(literalValue -> UUIDUtil.isUUID(literalValue) ||
+								FileAssetContainerUtil.getInstance().isFullPath(literalValue))
+						.collect(Collectors.toSet());
 
-			  body = replaceContainers(destinationSite, copiedContainersBySourceId, body, containersIdOrPath);
-			  sourceTemplateCopy.setBody(body);
+				body = replaceContainers(destinationSite, copiedContainersBySourceId, body, containersIdOrPath);
+				sourceTemplateCopy.setBody(body);
 			}
 
 			return this.templateAPI.copy(sourceTemplateCopy, destinationSite, false, null, this.SYSTEM_USER,
@@ -781,7 +932,7 @@ public class HostAssetsJobImpl extends ParentProxy{
 		}
 		return newDrawedBody;
 	}
-	
+
 	private Set<String> getContainersIdentifierOrPath(final Template sourceTemplateCopy)
 			throws DotDataException, DotSecurityException {
 
@@ -809,7 +960,7 @@ public class HostAssetsJobImpl extends ParentProxy{
 			return folderMappingsBySourceId.get(sourceFolder.getInode()).destinationFolder;
 		}
 		final Folder newFolder = this.folderAPI.createFolders(APILocator.getIdentifierAPI().find(sourceFolder.getIdentifier()).getPath(),
-						destinationSite, this.SYSTEM_USER, DONT_RESPECT_FRONTEND_ROLES);
+				destinationSite, this.SYSTEM_USER, DONT_RESPECT_FRONTEND_ROLES);
 		newFolder.setTitle(sourceFolder.getTitle());
 		if (sourceFolder.isShowOnMenu()) {
 			newFolder.setSortOrder(sourceFolder.getSortOrder());
@@ -828,103 +979,110 @@ public class HostAssetsJobImpl extends ParentProxy{
 	 * If the content to copy is a Content Page, then its multi-tree structure needs to be updated,
 	 * which involves updating the child references to point to the recently copied contentlets.
 	 * </p>
-	 * 
-	 * @param sourceContent              The {@link Contentlet} whose data will be copied.
-	 * @param copyOptions                The preferences selected by the user regarding what
-	 *                                   elements of the source site will be copied over to the new
-	 *                                   site.
-	 * @param destinationSite            The new {@link Host} object that will contain the
-	 *            information from the source site.
-	 * @param copiedContentlets          A {@link Map} containing the association between the
-	 *            						 Contentlet's Identifier in the source site and the
-	 *                                   Contentlet's Identifier in the destination site. This
-	 *                                   map keeps both the source and the destination
-	 *                                   {@link Contentlet} objects.
-	 * @param copiedFolders              A {@link Map} containing the association between the
-	 *                                   folder's Identifier from the source site with the folder's
-	 *                                   Identifier from the destination site. This map keeps both
-	 *                                   the source and the destination {@link Folder} objects.
-	 * @param copiedContainers           A {@link Map} that says what containerId from the source
-	 *                                   site has become what in the new copy-site
-	 * @param copiedTemplates            A {@link Map} that says what templateId from the source
-	 *                                   site has become what in the new copy-site
-	 * @param contentletsWithRelationships The dependencies of the contentlet to copy.
-	 * @param copiedContentTypes
+	 *
+	 * @param sourceContent                The {@link Contentlet} whose data will be copied.
+	 * @param copyOptions                  The preferences selected by the user regarding what
+	 *                                     elements of the source site will be copied over to the
+	 *                                     new site.
+	 * @param destinationSite              The new {@link Host} object that will contain the
+	 *                                     information from the source site.
+	 * @param copiedContentletsBySourceId  A {@link Map} containing the association between the
+	 *                                     Contentlet's Identifier in the source site and the
+	 *                                     Contentlet's Identifier in the destination site. This
+	 *                                     map keeps both the source and the destination
+	 *                                     {@link Contentlet} objects.
+	 * @param copiedFoldersBySourceId      A {@link Map} containing the association between the
+	 *                                     folder's Identifier from the source site with the
+	 *                                     folder's Identifier from the destination site. This map
+	 *                                     keeps both the source and the destination {@link Folder}
+	 *                                     objects.
+	 * @param copiedContainersBySourceId   A {@link Map} that says what containerId from the source
+	 *                                     site has become what in the new copy-site.
+	 * @param copiedTemplatesBySourceId    A {@link Map} that says what templateId from the source
+	 *                                     site has become what in the new copy-site.
+	 * @param contentsWithRelationships    The list of Contentlets that have other content related
+	 *                                     to them.
+	 * @param copiedContentTypesBySourceId A {@link Map} containing the association between the
+	 *                                     Content Type's Identifier in the source site and the
+	 *                                     Content Type's Identifier in the destination site. This
+	 *                                     is relevant ONLY if the
+	 *                                     {@code FEATURE_FLAG_ENABLE_CONTENT_TYPE_COPY} property
+	 *                                     is enabled.
 	 */
 	private Contentlet processCopyOfContentlet(final Contentlet sourceContent,
-			final HostCopyOptions copyOptions, final Host destinationSite,
-			final Map<String, ContentMapping> contentMappingsBySourceId,
-			final Map<String, FolderMapping> folderMappingsBySourceId,
-			final Map<String, Container> copiedContainersBySourceId,
-			final Map<String, HTMLPageAssetAPI.TemplateContainersReMap> templatesMappingBySourceId,
-			final List<Contentlet> contentsToCopyDependencies,
-		    final Map<String, ContentTypeMapping> copiedContentTypes) {
+											   final HostCopyOptions copyOptions, final Host destinationSite,
+											   final Map<String, ContentMapping> copiedContentletsBySourceId,
+											   final Map<String, FolderMapping> copiedFoldersBySourceId,
+											   final Map<String, Container> copiedContainersBySourceId,
+											   final Map<String, HTMLPageAssetAPI.TemplateContainersReMap> copiedTemplatesBySourceId,
+											   final List<Contentlet> contentsWithRelationships,
+											   final Map<String, ContentTypeMapping> copiedContentTypesBySourceId) {
 
-		//Since certain properties are modified here we're gonna use a defensive copy to avoid cache issue.
+		//Since certain properties are modified here we're going to use a defensive copy to avoid cache issue.
 		final Contentlet sourceCopy = new Contentlet(sourceContent);
-        Contentlet newContent = null;
-        try {
-            if (contentMappingsBySourceId.containsKey(sourceCopy.getIdentifier())) {
-                // The content has already been copied
+		Contentlet newContent = null;
+		try {
+			if (copiedContentletsBySourceId.containsKey(sourceCopy.getIdentifier())) {
+				// The content has already been copied
 				Logger.debug(HostAssetsJobImpl.class,()->String.format("---> Content identified by `%s` has been copied already.", sourceCopy.getIdentifier()));
-                return contentMappingsBySourceId.get(sourceCopy.getIdentifier()).destinationContent;
-            }
+				return copiedContentletsBySourceId.get(sourceCopy.getIdentifier()).destinationContent;
+			}
 			sourceCopy.getMap().put(Contentlet.DONT_VALIDATE_ME, true);
 			sourceCopy.getMap().put(Contentlet.DISABLE_WORKFLOW, true);
 			sourceCopy.setLowIndexPriority(true);
 
 			if (copyOptions.isCopyTemplatesAndContainers() && sourceCopy.isHTMLPage()) {
-				//If we're dealing with pages, need pass template mappings to the copyContentlet
-				//such method deals with all versions of the contentlet and it needs to know about the mapping info internally.
-				sourceCopy.getMap().put(Contentlet.TEMPLATE_MAPPINGS, templatesMappingBySourceId);
+				//If we're dealing with pages, we need to pass template mappings to the copyContentlet
+				//such a method deals with all versions of the contentlet, and it needs to know about the mapping info internally.
+				sourceCopy.getMap().put(Contentlet.TEMPLATE_MAPPINGS, copiedTemplatesBySourceId);
 			}
-			final ContentType destinationContentType = Try.of(() -> copiedContentTypes.get(sourceCopy.getContentTypeId()).destinationContentType).getOrNull();
-            if (InodeUtils.isSet(sourceCopy.getFolder())
-                    && !sourceCopy.getFolder().equals(this.SYSTEM_FOLDER.getInode())) {
-                // The source content has a folder assigned in the source Site we copy it to the
+			final ContentType destinationContentType = Try.of(() -> copiedContentTypesBySourceId.get(sourceCopy.getContentTypeId()).destinationContentType).getOrNull();
+			if (InodeUtils.isSet(sourceCopy.getFolder())
+					&& !sourceCopy.getFolder().equals(this.SYSTEM_FOLDER.getInode())) {
+				// The source content has a folder assigned in the source Site we copy it to the
 				// same destination folder
-                final Folder sourceFolder = this.folderAPI.find(sourceCopy.getFolder(), this.SYSTEM_USER, DONT_RESPECT_FRONTEND_ROLES);
-                final Folder destinationFolder = folderMappingsBySourceId.get(sourceFolder.getInode()) != null ? folderMappingsBySourceId
-                        .get(sourceFolder.getInode()).destinationFolder : null;
-                if (!copyOptions.isCopyFolders()) {
-                    return null;
-                }
+				final Folder sourceFolder = this.folderAPI.find(sourceCopy.getFolder(), this.SYSTEM_USER, DONT_RESPECT_FRONTEND_ROLES);
+				final Folder destinationFolder = copiedFoldersBySourceId.get(sourceFolder.getInode()) != null ? copiedFoldersBySourceId
+						.get(sourceFolder.getInode()).destinationFolder : null;
+				if (!copyOptions.isCopyFolders()) {
+					return null;
+				}
 
-                if (destinationFolder != null) {
-                    // We have already mapped the source folder of the content to a destination
+				if (destinationFolder != null) {
+					// We have already mapped the source folder of the content to a destination
 					// folder because the user requested to also copy folders
-                    newContent = this.contentAPI.copyContentlet(sourceCopy, destinationContentType, destinationFolder, this.SYSTEM_USER,
+					newContent = this.contentAPI.copyContentlet(sourceCopy, destinationContentType, destinationFolder, this.SYSTEM_USER,
 							DONT_RESPECT_FRONTEND_ROLES);
-                } else {
-                    // We don't have a destination folder to set the content to, so we are going to
+				} else {
+					// We don't have a destination folder to set the content to, so we are going to
 					// set it to the Site
-                    newContent = this.contentAPI.copyContentlet(sourceCopy, destinationContentType, destinationSite, this.SYSTEM_USER,
+					newContent = this.contentAPI.copyContentlet(sourceCopy, destinationContentType, destinationSite, this.SYSTEM_USER,
 							DONT_RESPECT_FRONTEND_ROLES);
-                }
-            } else if (InodeUtils.isSet(sourceCopy.getHost())
-                    && !sourceCopy.getHost().equals(this.SYSTEM_HOST.getInode())) {
-                // The content is assigned to the source Site, we assign the new content to the new Site
-                newContent = this.contentAPI.copyContentlet(sourceCopy, destinationContentType, destinationSite, this.SYSTEM_USER,
+				}
+			} else if (InodeUtils.isSet(sourceCopy.getHost())
+					&& !sourceCopy.getHost().equals(this.SYSTEM_HOST.getInode())) {
+				// The content is assigned to the source Site, we assign the new content to the new Site
+				newContent = this.contentAPI.copyContentlet(sourceCopy, destinationContentType, destinationSite, this.SYSTEM_USER,
 						DONT_RESPECT_FRONTEND_ROLES);
-            } else {
-                // The content has no folder or Site association, so we create a global copy as well
-                newContent = this.contentAPI.copyContentlet(sourceCopy, this.SYSTEM_USER, DONT_RESPECT_FRONTEND_ROLES);
-            }
+			} else {
+				// The content has no folder or Site association, so we create a global copy as well
+				newContent = this.contentAPI.copyContentlet(sourceCopy, this.SYSTEM_USER, DONT_RESPECT_FRONTEND_ROLES);
+			}
 
-            if (copyOptions.isCopyContentOnPages() && newContent.isHTMLPage()) {
+			if (copyOptions.isCopyContentOnPages() && newContent.isHTMLPage()) {
 				Logger.debug(HostAssetsJobImpl.class,()->String.format("---> Copying contents from page with title `%s` and id `%s`", sourceCopy.getTitle(), sourceCopy.getIdentifier()));
-                // Copy page-associated contentlets
-                final List<MultiTree> pageContents = APILocator.getMultiTreeAPI().getMultiTrees(sourceCopy.getIdentifier());
+				// Copy page-associated contentlets
+				final List<MultiTree> pageContents = APILocator.getMultiTreeAPI().getMultiTrees(sourceCopy.getIdentifier());
 				for (final MultiTree sourceMultiTree : pageContents) {
-					String newChild = sourceMultiTree.getChild();
+					String newChild = sourceMultiTree.getContentlet();
 					// Update the child reference to point to the previously copied content
-					if (contentMappingsBySourceId.containsKey(sourceMultiTree.getChild())) {
-						newChild = contentMappingsBySourceId.get(sourceMultiTree.getChild()).destinationContent.getIdentifier();
+					if (copiedContentletsBySourceId.containsKey(sourceMultiTree.getContentlet())) {
+						newChild = copiedContentletsBySourceId.get(sourceMultiTree.getContentlet()).destinationContent.getIdentifier();
 					}
 
-                    String newContainer = sourceMultiTree.getParent2();
-					if(copiedContainersBySourceId.containsKey(sourceMultiTree.getParent2())){
-						newContainer = copiedContainersBySourceId.get(sourceMultiTree.getParent2()).getIdentifier();
+					String newContainer = sourceMultiTree.getContainer();
+					if(copiedContainersBySourceId.containsKey(sourceMultiTree.getContainer())){
+						newContainer = copiedContainersBySourceId.get(sourceMultiTree.getContainer()).getIdentifier();
 					}
 
 					final MultiTree multiTree = new MultiTree(newContent.getIdentifier(),
@@ -937,168 +1095,261 @@ public class HostAssetsJobImpl extends ParentProxy{
 					APILocator.getMultiTreeAPI().saveMultiTree(multiTree);
 				}
 
-            }// Pages are a big deal.
+			}// Pages are a big deal.
 
-            contentMappingsBySourceId.put(sourceCopy.getIdentifier(), new ContentMapping(sourceCopy, newContent));
+			copiedContentletsBySourceId.put(sourceCopy.getIdentifier(), new ContentMapping(sourceCopy, newContent));
 			final Contentlet finalNewContent = newContent;
 			Logger.debug(HostAssetsJobImpl.class,()->String.format("---> Re-Mapping content: Identifier `%s` now points to `%s`.", sourceCopy.getIdentifier(), finalNewContent
 					.getIdentifier()));
 
-            if (doesRelatedContentExists(sourceCopy)) {
-                contentsToCopyDependencies.add(sourceCopy);
-            }
-        } catch (final Exception e) {
+			this.checkRelatedContentToCopy(sourceCopy, contentsWithRelationships);
+		} catch (final Exception e) {
 			Logger.error(this, String.format("An error occurred when copying content '%s' from Site '%s' to Site '%s'." +
-					" The process will continue...", sourceCopy.getIdentifier(), sourceCopy.getHost(),
+							" The process will continue...", sourceCopy.getIdentifier(), sourceCopy.getHost(),
 					destinationSite.getHostname()), e);
 		}
-        return newContent;
-    }
+		return newContent;
+	}
 
 	/**
 	 * Copies the Relationship data of Contentlets that have child relationships based on the newly
-	 * assigned Identifiers after they have been copied to the new Site.
+	 * assigned Identifiers after they have been copied to the new Site; i.e., parent Contentlets.
 	 * <p>If no Content Types are being copied to the new Site, the relationship data update will
 	 * only include adding the new related Contentlet copies that now live in the new Site. But, if
-	 * Content Types ARE being copied, the Content Type IDs in the relationship data must reflect
-	 * both the new related Contentlet copies, AND the new Content Type IDs.</p>
+	 * Content Types ARE being copied, the copied Relationships must be taken into account to save
+	 * the copied Contentlets to the new Relationship records as they reflect the new IDs for the
+	 * copied Content Types as well.</p>
 	 *
-	 * @param contentsToCopyDependencies The list of {@link Contentlet} objects that are the
-	 *                                   parents of a given relationship.
-	 * @param contentMappingsBySourceId  A {@link Map} containing the association between the
-	 *                                   contentlet's Identifier from the source site and the
-	 *                                   contentlet's Identifier from the destination site. This
-	 *                                   map keeps both the source and the destination
-	 *                                   {@link Contentlet} objects.
-	 * @param copiedContentTypes         A {@link Map} containing the association between the
-	 *                                   Content Type's ID from the source site and the Content
-	 *                                   Type's ID from the destination site. This map keeps both
-	 *                                   the source and the destination {@link ContentType} objects.
-	 * @param copyOptions                The {@link HostCopyOptions} object containing what objects
-	 *                                   from the source Site must be copied to the destination
-	 *                                   Site.
+	 * @param contentsWithRelationships     The list of {@link Contentlet} objects that are the
+	 *                                      parents of a given relationship.
+	 * @param copiedContentsBySourceId      The {@link Map} containing the association between the
+	 *                                      contentlet's Identifier from the source site and the
+	 *                                      contentlet's Identifier from the destination site. This
+	 *                                      map keeps both the source and the destination
+	 *                                      {@link Contentlet} objects.
+	 * @param copiedRelationshipsBySourceId The {@link Map} containing the copied Relationships
+	 *                                      from the source Site. This way, the copied Contentlets
+	 *                                      will be saved just like the original ones.
+	 * @param copyOptions                   The {@link HostCopyOptions} object containing what
+	 *                                      objects from the source Site must be copied to the
+	 *                                      destination Site.
 	 *
 	 * @throws DotDataException     An error occurred when updating records in the database.
 	 * @throws DotSecurityException The {@link User} accessing the APIs doesn't have the required
 	 *                              permissions to perform this action.
 	 */
-    private void copyRelatedContentlets(final List<Contentlet> contentsToCopyDependencies,
-										final Map<String, ContentMapping> contentMappingsBySourceId, final Map<String, ContentTypeMapping> copiedContentTypes, final HostCopyOptions copyOptions) throws DotDataException, DotSecurityException {
-        for (final Contentlet sourceContent : contentsToCopyDependencies) {
-            final Contentlet destinationContent = contentMappingsBySourceId.get(sourceContent.getIdentifier()).destinationContent;
-            final Map<Relationship, List<Contentlet>> contentRelationships = new HashMap<>();
-            final List<Relationship> rels = this.relationshipAPI.byContentType(sourceContent.getContentType());
-            for (final Relationship r : rels) {
-                if (!contentRelationships.containsKey(r)) {
-                    contentRelationships.put(r, new ArrayList<>());
-                }
-                final List<Contentlet> cons = this.contentAPI.getRelatedContent(sourceContent, r, this.SYSTEM_USER, RESPECT_FRONTEND_ROLES);
-                List<Contentlet> records = new ArrayList<>();
-                for (final Contentlet c : cons) {
-                    records = contentRelationships.get(r);
-                    if (UtilMethods.isSet(contentMappingsBySourceId.get(c.getIdentifier()))) {
-                        records.add(contentMappingsBySourceId.get(c.getIdentifier()).destinationContent);
-                    } else {
-                        records.add(c);
-                    }
-                }
-				ContentletRelationshipRecords related;
-				if (!Config.getBooleanProperty("FEATURE_FLAG_ENABLE_CONTENT_TYPE_COPY", false) || !copyOptions.isCopyContentTypes()) {
-					related = new ContentletRelationships(
-							destinationContent).new ContentletRelationshipRecords(r, true);
-				} else {
-					// First, we must find the parent of the relationship in order to update it using
-					// the actual relationship field in the parent Content Type. Once we have it, we
-					// can associate the recently copied Contentlets to it
-					final String relationName = UtilMethods.isSet(r.getParentRelationName())
-							? r.getParentRelationName()
-							: r.getChildRelationName();
-					final String contentTypeWithRelField = UtilMethods.isNotSet(r.getParentRelationName())
-							? r.getParentStructureInode()
-							: r.getChildStructureInode();
-					final ContentTypeMapping contentTypeMapping = copiedContentTypes.get(contentTypeWithRelField);
-					final Field relationshipField = this.contentTypeFieldAPI.byContentTypeIdAndVar(
-							contentTypeMapping.destinationContentType.id(), relationName);
-					final Relationship relationshipFromField = this.relationshipAPI.getRelationshipFromField(relationshipField, this.SYSTEM_USER);
-					related = new ContentletRelationships(destinationContent).new ContentletRelationshipRecords(relationshipFromField, true);
+	private void copyRelatedContentlets(final List<Contentlet> contentsWithRelationships,
+										final Map<String, ContentMapping> copiedContentsBySourceId, final Map<String, RelationshipMapping> copiedRelationshipsBySourceId, final HostCopyOptions copyOptions) throws DotDataException, DotSecurityException {
+		for (final Contentlet sourceContent : contentsWithRelationships) {
+			boolean isDestinationContentInSystemHost = false;
+			Contentlet destinationContent;
+			if (Host.SYSTEM_HOST.equals(sourceContent.getHost())) {
+				destinationContent = sourceContent;
+				isDestinationContentInSystemHost = true;
+			} else {
+				destinationContent = copiedContentsBySourceId.get(sourceContent.getIdentifier()).destinationContent;
+			}
+			final Map<Relationship, List<Contentlet>> contentRelationships = new HashMap<>();
+			final List<Relationship> relationshipsInContentType = this.relationshipAPI.byContentType(sourceContent.getContentType());
+			for (final Relationship relationship : relationshipsInContentType) {
+				if (!contentRelationships.containsKey(relationship)) {
+					contentRelationships.put(relationship, new ArrayList<>());
 				}
-                related.setRecords(records);
-				this.contentAPI.relateContent(destinationContent, related, this.SYSTEM_USER, DONT_RESPECT_FRONTEND_ROLES);
-            }
-        }
-    }
-
-	/**
-	 * Verifies if the specified {@link Contentlet} object has one or more valid related contentlets.
-	 *
-	 * @param contentlet The Contentlet whose relationships will be verified.
-	 *
-	 * @return If the Contentlet is the parent of one or more Contentlets, returns {@code true}. Otherwise, returns
-	 * {@code false}.
-	 *
-	 * @throws DotDataException     An error occurred when accessing the data source.
-	 * @throws DotSecurityException The specified user does not have the required permissions to perform this action.
-	 */
-	private boolean doesRelatedContentExists(final Contentlet contentlet) throws DotDataException, DotSecurityException{
-        if(contentlet == null) {
-			return false;
+				final List<Contentlet> relatedContentlets =
+						this.contentAPI.getRelatedContent(sourceContent, relationship, this.SYSTEM_USER, RESPECT_FRONTEND_ROLES);
+				List<Contentlet> records = new ArrayList<>();
+				for (final Contentlet relatedContentlet : relatedContentlets) {
+					records = contentRelationships.get(relationship);
+					if (UtilMethods.isSet(copiedContentsBySourceId.get(relatedContentlet.getIdentifier()))) {
+						final Tree relationshipData =
+								TreeFactory.getTree(relatedContentlet.getIdentifier(),
+										sourceContent.getIdentifier(), relationship.getRelationTypeValue());
+						// In self-related Relationships, we need to make sure that the related Contentlet is NOT the
+						// parent in the relationship in order to NOT create a duplicate relationship
+						if (this.relationshipAPI.sameParentAndChild(relationship) && UtilMethods.isSet(relationshipData.getParent())) {
+							continue;
+						}
+						records.add(copiedContentsBySourceId.get(relatedContentlet.getIdentifier()).destinationContent);
+						if (isDestinationContentInSystemHost) {
+							records.add(relatedContentlet);
+						}
+					} else {
+						records.add(relatedContentlet);
+					}
+				}
+				if (!records.isEmpty()) {
+					ContentletRelationshipRecords related;
+					if (!CONTENT_TYPE_COPY_FLAG.get() || !copyOptions.isCopyContentTypes()) {
+						related = new ContentletRelationships(
+								destinationContent).new ContentletRelationshipRecords(relationship, true);
+					} else {
+						if (!copiedRelationshipsBySourceId.containsKey(relationship.getInode())) {
+							continue;
+						}
+						final Relationship copiedRelationship = copiedRelationshipsBySourceId.get(relationship.getInode()).destinationRelationship;
+						related = new ContentletRelationships(destinationContent)
+								.new ContentletRelationshipRecords(copiedRelationship, true);
+					}
+					related.setRecords(records);
+					this.contentAPI.relateContent(destinationContent, related, this.SYSTEM_USER, DONT_RESPECT_FRONTEND_ROLES);
+				}
+			}
 		}
-
-        final List<Relationship> rels = APILocator.getRelationshipAPI().byContentType(contentlet.getContentType());
-        for (final Relationship r : rels) {
-            final List<Contentlet> cons = this.contentAPI.getRelatedContent(contentlet, r, this.SYSTEM_USER, DONT_RESPECT_FRONTEND_ROLES);
-            if(cons.size() > 0 && APILocator.getRelationshipAPI().isParent(r, contentlet.getContentType())){
-            	return true;
-            }
-        }
-        return false;
 	}
 
-    @Override
-    protected int[] getAllowedVersions() {
-        return new int[] { LicenseLevel.STANDARD.level, LicenseLevel.PROFESSIONAL.level,
+	/**
+	 * Verifies if the specified {@link Contentlet} object has one or more valid related
+	 * contentlets. That is, whether the Contentlet is the parent of the relationship or not. Keep
+	 * in mind that, in the case of self-related Content Types, the parent and child point to each
+	 * other, so the Tree data must be accessed and read accordingly.
+	 *
+	 * @param contentlet                   The Contentlet whose relationships will be verified.
+	 * @param contentletsWithRelationships The list of Contentlets that have relationships, and
+	 *                                     need to be processed later.
+	 *
+	 * @throws DotDataException     An error occurred when accessing the data source.
+	 * @throws DotSecurityException The specified user does not have the required permissions to
+	 *                              perform this action.
+	 */
+	private void checkRelatedContentToCopy(final Contentlet contentlet,
+										   final List<Contentlet> contentletsWithRelationships) throws DotDataException, DotSecurityException {
+		if (contentlet == null) {
+			return;
+		}
+		final List<Relationship> relationshipsByCT =
+				this.relationshipAPI.byContentType(contentlet.getContentType());
+		for (final Relationship relationship : relationshipsByCT) {
+			final List<Contentlet> relatedContents = this.contentAPI.getRelatedContent(contentlet,
+					relationship, this.SYSTEM_USER, DONT_RESPECT_FRONTEND_ROLES);
+			if (COPY_RELATED_CONTENT_IN_SYSTEM_HOST_CONTENTS_FLAG.get()) {
+				for (final Contentlet relatedContent : relatedContents) {
+					if (Host.SYSTEM_HOST.equals(relatedContent.getHost())) {
+						contentletsWithRelationships.add(relatedContent);
+					}
+				}
+			}
+			if (!relatedContents.isEmpty() && this.relationshipAPI.isParent(relationship,
+					contentlet.getContentType())) {
+				contentletsWithRelationships.add(contentlet);
+			}
+		}
+	}
+
+	@Override
+	protected int[] getAllowedVersions() {
+		return new int[] { LicenseLevel.STANDARD.level, LicenseLevel.PROFESSIONAL.level,
 				LicenseLevel.PRIME.level, LicenseLevel.PLATFORM.level };
-    }
+	}
 
-    private class ContentMapping {
-        @SuppressWarnings("unused")
-        Contentlet sourceContent;
-        Contentlet destinationContent;
+	private class ContentMapping {
+		@SuppressWarnings("unused")
+		Contentlet sourceContent;
+		Contentlet destinationContent;
 
-        public ContentMapping(Contentlet sourceContent, Contentlet destinationContent) {
-            super();
-            this.sourceContent = sourceContent;
-            this.destinationContent = destinationContent;
-        }
-    }
+		public ContentMapping(Contentlet sourceContent, Contentlet destinationContent) {
+			super();
+			this.sourceContent = sourceContent;
+			this.destinationContent = destinationContent;
+		}
+	}
 
-    private class FolderMapping {
-        Folder sourceFolder;
-        Folder destinationFolder;
+	private class FolderMapping {
+		Folder sourceFolder;
+		Folder destinationFolder;
 
-        public FolderMapping(Folder sourceFolder, Folder destinationFolder) {
-            super();
-            this.sourceFolder = sourceFolder;
-            this.destinationFolder = destinationFolder;
-        }
+		public FolderMapping(Folder sourceFolder, Folder destinationFolder) {
+			super();
+			this.sourceFolder = sourceFolder;
+			this.destinationFolder = destinationFolder;
+		}
 
-    }
+	}
 
 	/**
-	 *
+	 * This mapping class stores the relationship between source Content Types, and copied Content
+	 * Types. This is very useful when Content Types are copied.
 	 */
 	private static class ContentTypeMapping {
 
 		ContentType sourceContentType;
 		ContentType destinationContentType;
 
+		/**
+		 * Default class constructor.
+		 *
+		 * @param sourceContentType      The {@link ContentType} from the source/original Site.
+		 * @param destinationContentType The {@link ContentType} from the new Site that is taking
+		 *                               the copied data.
+		 */
 		public ContentTypeMapping(final ContentType sourceContentType,
 								  final ContentType destinationContentType) {
 			this.sourceContentType = sourceContentType;
 			this.destinationContentType = destinationContentType;
 		}
 
-    }
+	}
+
+	/**
+	 * This mapping class stores the relationship between source Relationships and copied
+	 * Relationships. This is very useful when Content Types are copied as it helps re-create the
+	 * appropriate data Relationship structures in the copied Content Types.
+	 */
+	private static class RelationshipMapping {
+
+		final ContentType sourceContentType;
+		final RelationshipField sourceField;
+		final Relationship sourceRelationship;
+		final Relationship destinationRelationship;
+
+		/**
+		 * Creates a Relationship Mapping for a copied Content Type.
+		 *
+		 * @param sourceRelationship      The {@link Relationship} record from the source/original
+		 *                                Site.
+		 * @param destinationRelationship The {@link Relationship} record for the new Site that is
+		 *                                taking the copied data.
+		 */
+		public RelationshipMapping(final Relationship sourceRelationship,
+								   final Relationship destinationRelationship) {
+			this(sourceRelationship, destinationRelationship, null, null);
+		}
+
+		/**
+		 * Creates a Relationship Mapping for a copied Content Type.
+		 *
+		 * @param sourceRelationship The {@link Relationship} record from the source/original Site.
+		 * @param sourceContentType  The {@link ContentType} from the source/original Site.
+		 * @param sourceField        The {@link RelationshipField} from the source/original Content
+		 *                           Type.
+		 */
+		public RelationshipMapping(final Relationship sourceRelationship,
+								   final ContentType sourceContentType,
+								   final RelationshipField sourceField) {
+			this(sourceRelationship, null, sourceContentType, sourceField);
+		}
+
+		/**
+		 * Creates a Relationship Mapping for a copied Content Type.
+		 *
+		 * @param sourceRelationship      The {@link Relationship} record from the source/original
+		 *                                Site.
+		 * @param destinationRelationship The {@link Relationship} record for the new Site that is
+		 *                                taking the copied data.
+		 * @param sourceContentType       The {@link ContentType} from the source/original Site.
+		 * @param sourceField             The {@link RelationshipField} from the source/original
+		 *                                Content Type.
+		 */
+		public RelationshipMapping(final Relationship sourceRelationship,
+								   final Relationship destinationRelationship,
+								   final ContentType sourceContentType,
+								   final RelationshipField sourceField) {
+			this.sourceRelationship = sourceRelationship;
+			this.destinationRelationship = destinationRelationship;
+			this.sourceContentType = sourceContentType;
+			this.sourceField = sourceField;
+		}
+
+	}
 
 	/**
 	 * Utility method which validates that the source and destination Sites can be pulled from the database. That is,
@@ -1113,7 +1364,7 @@ public class HostAssetsJobImpl extends ParentProxy{
 	 * @throws JobExecutionException Either the source or destination Site could not be retrieved from the database.
 	 */
 	private void validateSiteInfo(final Host sourceSite, final Host destinationSite, final String sourceSiteId, final String destinationSiteId,
-			final String jobName) throws JobExecutionException {
+								  final String jobName) throws JobExecutionException {
 		final List<String> nullSites = new ArrayList<>();
 		if (null == sourceSite || !UtilMethods.isSet(sourceSite.getIdentifier())) {
 			nullSites.add(sourceSiteId);
@@ -1124,7 +1375,7 @@ public class HostAssetsJobImpl extends ParentProxy{
 		if (!nullSites.isEmpty()) {
 			final String errorMsg = String.format("Sites: [%s] came in as null from DB search. Site Copy for Job" +
 							" '%s' has been cancelled!", org.apache.commons.lang3.StringUtils.join(nullSites,
-					StringPool.COMMA),
+							StringPool.COMMA),
 					jobName);
 			Logger.error(HostAssetsJobImpl.class, errorMsg);
 			throw new JobExecutionException(errorMsg);
